--- a/src/app/modules/contests/components/contests-table/contests-table.component.scss
+++ b/src/app/modules/contests/components/contests-table/contests-table.component.scss
@@ -86,11 +86,11 @@ thead tr {
 }
 
 .badge.contest-badge-light {
-  background-color: var(--bg-light);
+  background-color: var(--contest-color-light);
   color: var(--bg);
 }
 
 .avatar {
-  background-color: var(--bg-light);
+  background-color: var(--contest-color-light);
   color: var(--bg);
 }
