--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.scss
@@ -1,3 +1,17 @@
-.card .card-header {
-  display: block;
+@import 'styles/kep-imports';
+
+app-contest-attempts {
+  kep-table {
+    thead tr {
+      background: var(--bg-gradient) !important;
+    }
+
+    thead th:nth-child(2) {
+      padding-right: 0 !important;
+    }
+
+    tbody tr:hover {
+      background-color: var(--contest-color-light) !important;
+    }
+  }
 }
