--- a/src/app/modules/contests/pages/contest/contest-questions/contest-question-card/contest-question-card.component.html
+++ b/src/app/modules/contests/pages/contest/contest-questions/contest-question-card/contest-question-card.component.html
@@ -20,11 +20,9 @@
     {{ question.question }}
   </div>
 
-  <div class="card-footer">
-    @if (question.answer) {
-      <span class="text-dark">
-        <mathjax [content]="question.answer"></mathjax>
-      </span>
-    }
+  <div class="card-footer" *ngIf="question.answer">
+    <span class="text-dark">
+      <mathjax [content]="question.answer"></mathjax>
+    </span>
   </div>
 </div>
