--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.html
@@ -11,88 +11,89 @@
     {{ 'CONTESTS.STANDINGS' | translate }}
   </h4>
 }
+@if (!contest.isFinished()) {
+  <div class="wrap">
+    <div class="countdown">
+      <div attr.data-init-value="{{ hours }}" class="bloc-time hours">
+        <span class="count-title text-dark">{{ 'HOUR' | translate }}</span>
 
-<div class="wrap">
-  <div class="countdown">
-    <div attr.data-init-value="{{ hours }}" class="bloc-time hours">
-      <span class="count-title text-dark">{{ 'HOUR' | translate }}</span>
+        <div class="figure text-contest hours hours-1">
+          <span class="top">0</span>
+          <span class="top-back">
+            <span>0</span>
+          </span>
+          <span class="bottom">0</span>
+          <span class="bottom-back">
+            <span>0</span>
+          </span>
+        </div>
 
-      <div class="figure text-contest hours hours-1">
-        <span class="top">0</span>
-        <span class="top-back">
-          <span>0</span>
-        </span>
-        <span class="bottom">0</span>
-        <span class="bottom-back">
-          <span>0</span>
-        </span>
+        <div class="figure text-contest hours hours-2">
+          <span class="top">0</span>
+          <span class="top-back">
+            <span>0</span>
+          </span>
+          <span class="bottom">0</span>
+          <span class="bottom-back">
+            <span>0</span>
+          </span>
+        </div>
       </div>
 
-      <div class="figure text-contest hours hours-2">
-        <span class="top">0</span>
-        <span class="top-back">
-          <span>0</span>
-        </span>
-        <span class="bottom">0</span>
-        <span class="bottom-back">
-          <span>0</span>
-        </span>
-      </div>
-    </div>
+      <div attr.data-init-value="{{ minutes }}" class="bloc-time min">
+        <span class="count-title text-dark">{{ 'MINUTE' | translate }}</span>
 
-    <div attr.data-init-value="{{ minutes }}" class="bloc-time min">
-      <span class="count-title text-dark">{{ 'MINUTE' | translate }}</span>
+        <div class="figure text-contest min min-1">
+          <span class="top">0</span>
+          <span class="top-back">
+            <span>0</span>
+          </span>
+          <span class="bottom">0</span>
+          <span class="bottom-back">
+            <span>0</span>
+          </span>
+        </div>
 
-      <div class="figure text-contest min min-1">
-        <span class="top">0</span>
-        <span class="top-back">
-          <span>0</span>
-        </span>
-        <span class="bottom">0</span>
-        <span class="bottom-back">
-          <span>0</span>
-        </span>
-      </div>
-
-      <div class="figure text-contest min min-2">
-        <span class="top">0</span>
-        <span class="top-back">
-          <span>0</span>
-        </span>
-        <span class="bottom">0</span>
-        <span class="bottom-back">
-          <span>0</span>
-        </span>
-      </div>
-    </div>
-
-    <div attr.data-init-value="{{ seconds }}" class="bloc-time sec">
-      <span class="count-title text-dark">{{ 'SECOND' | translate }}</span>
-
-      <div class="figure text-contest sec sec-1">
-        <span class="top">0</span>
-        <span class="top-back">
-          <span>0</span>
-        </span>
-        <span class="bottom">0</span>
-        <span class="bottom-back">
-          <span>0</span>
-        </span>
+        <div class="figure text-contest min min-2">
+          <span class="top">0</span>
+          <span class="top-back">
+            <span>0</span>
+          </span>
+          <span class="bottom">0</span>
+          <span class="bottom-back">
+            <span>0</span>
+          </span>
+        </div>
       </div>
 
-      <div class="figure text-contest sec sec-2">
-        <span class="top">0</span>
-        <span class="top-back">
-          <span>0</span>
-        </span>
-        <span class="bottom">0</span>
-        <span class="bottom-back">
-          <span>0</span>
-        </span>
+      <div attr.data-init-value="{{ seconds }}" class="bloc-time sec">
+        <span class="count-title text-dark">{{ 'SECOND' | translate }}</span>
+
+        <div class="figure text-contest sec sec-1">
+          <span class="top">0</span>
+          <span class="top-back">
+            <span>0</span>
+          </span>
+          <span class="bottom">0</span>
+          <span class="bottom-back">
+            <span>0</span>
+          </span>
+        </div>
+
+        <div class="figure text-contest sec sec-2">
+          <span class="top">0</span>
+          <span class="top-back">
+            <span>0</span>
+          </span>
+          <span class="bottom">0</span>
+          <span class="bottom-back">
+            <span>0</span>
+          </span>
+        </div>
       </div>
     </div>
   </div>
-</div>
+}
 
 <!--@if (!contest.isFinished()) {-->
 <!--  <div class="mb-2 col-lg-10 col-12 offset-lg-1 offset-0">-->
