--- a/src/app/modules/contests/components/contest-countdown-card/contest-countdown-card.component.html
+++ b/src/app/modules/contests/components/contest-countdown-card/contest-countdown-card.component.html
@@ -12,8 +12,8 @@
       alt="contest-logo">
     </div>
 
-    <div class="card-body mt-1">
-      <h4 class="text-center mb-1">
+    <div class="card-header my-1 justify-content-center">
+      <h4 class="text-uppercase">
         @switch (contest.status) {
           @case (ContestStatus.ALREADY) {
             {{ 'CONTESTS.CONTEST_ENDS' | translate }}
