--- a/src/app/modules/contests/pages/contest/contest-tab/contest-tab.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-tab/contest-tab.component.scss
@@ -6,6 +6,10 @@
   color: var(--bg);
 }
 
+.nav-tabs .nav-link:hover {
+  background-color: var(--contest-color-light) !important;
+}
+
 ::ng-deep .dark-layout .nav-tabs .nav-link.active {
   color: #fff !important;
 }
