--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -147,11 +147,11 @@
         </td>
 
         <td>
-          <div class="d-flex align-items-center text-dark text-nowrap" ngbTooltip="{{ 'TIME' | translate }}">
+          <div class="d-flex align-items-center text-dark text-nowrap">
             <kep-icon color="info" type="duotone" name="watch"/>
             {{ attempt.time }} {{ 'MS' | translate }}
           </div>
-          <div class="d-flex align-items-center text-dark text-nowrap" ngbTooltip="{{ 'MEMORY' | translate }}">
+          <div class="d-flex align-items-center text-dark text-nowrap">
             <kep-icon color="primary" type="duotone" name="external-drive"/>
             {{ attempt.memory }} {{ 'KB' | translate }}
           </div>
